# multiviewrecorder

./: .gitignore  README.md  pyproject.toml
src/multiviewrecorder/: __init__.py  calibrate_extrinsics.py  enumerate_cameras.py  find_checkerboard.py  mvr.py  preview_cameras.py  visualize_extrinsics.py  webcam_capabilities.py
